// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Vue 3 Mixin: > conditionally displays the beforeMount event 1`] = `
[
  {
    "content": [
      "component before-mount: <code>test</code>",
      "filename: <code>&lt;project root&gt;/test.js</code>",
    ],
    "label": undefined,
    "name": "table",
  },
]
`;

exports[`Vue 3 Mixin: > conditionally displays the beforeUnmount event 1`] = `
[
  {
    "content": [
      "component before-unmount: <code>test</code>",
      "filename: <code>&lt;project root&gt;/test.js</code>",
    ],
    "label": undefined,
    "name": "table",
  },
]
`;

exports[`Vue 3 Mixin: > conditionally displays the created & mounted events 1`] = `
[
  {
    "content": [
      "component created: <code>test</code>",
      "filename: <code>&lt;project root&gt;/test.js</code>",
    ],
    "label": undefined,
    "name": "table",
  },
  {
    "content": [
      "component mounted: <code>test</code>",
      "filename: <code>&lt;project root&gt;/test.js</code>",
    ],
    "label": undefined,
    "name": "table",
  },
]
`;

exports[`Vue 3 Mixin: > conditionally displays the unmounted event 1`] = `
[
  {
    "content": [
      "component unmounted: <code>test</code>",
      "filename: <code>&lt;project root&gt;/test.js</code>",
    ],
    "label": undefined,
    "name": "table",
  },
]
`;

exports[`Vue 3 Mixin: > conditionally displays the updated event 1`] = `
[
  {
    "content": [
      "component updated: <code>test</code>",
      "filename: <code>&lt;project root&gt;/test.js</code>",
    ],
    "label": undefined,
    "name": "table",
  },
]
`;
